2010-07-22 Tomas Brambora, Jiri Sadek (3.4.3)
    * Keyset detail display fix
	* Enhance permissions granularity (initial version)
	* Typo fixes

2010-07-02 Jiri Sadek (3.4.2)
    * Registrar edit form fix (system registrar bug)

2010-07-02 Jiri Sadek (3.4.1)
    * publish flag in domain detail

2010-06-28 Tomas Brambora (3.4.0)
    * NSSet detail - report level field added
    * Registrar edit form facelift (hideable sections).
    * Added support for registrar certifications.
    * Registrars can now be assigned to groups.
    * Added registrar groups editor (creating/deleting/renaming groups).
    * Logging only changes in registrar editation.
    * Added group filter to registrar filter form.
    * Added "next/prev." links to filter form page (briefly - if there is a 
    time field with an offset (e.g. last month) displayed, this links jump to 
    the results for the prev./next time period).
    * Buttons in Dahne detail pages that jump directly to filter forms now only
    return results for the last month.
    * Known bugs fixed.
    * New unit tests added.

2010-04-07 Tomas Brambora (3.3.6)
    * Introduced permissions checking (permissions are described using in csv
      file).
    * Added an example csv file with user "test" having all the permissions.
    * Minor bugfixes, mostly related to permissions.
    * Changes in payment pairing / type assigning.
    * Bugfixes.

2010-03-23 Tomas Brambora (3.3.5)

    * Changes in payments (an unassigned payment is now recognized by having
    type == 1, not invoiceId == 0).

2010-03-19 Jiri Sadek (3.3.4)

    * import order fix (CosNaming, omniORB)

2010-03-17 Tomas Brambora (3.3.3)
    * Fixed bugs related to CORBA logd not available in omninames service /
      logd server not running / logd server crashing.
    * Renamed BankStatements filter header to Payments.
    * Fixed a bug, where KeySetDetail crashed sometimes when history was on.