@@ -204,7 +204,7 @@ class ContactDetail(ObjectDetail):
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('EPP Actions'), 'logger', 
-                        [{'Service': 3, 'RequestPropertyValue.Name': 'id',
+                        [{'Service': 3, 'RequestPropertyValue.Name': 'handle',
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('Webadmin Actions'), 'logger', 
@@ -275,7 +275,7 @@ class NSSetDetail(ObjectDetail):
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('EPP Actions'), 'logger', 
-                        [{'Service': 3, 'RequestPropertyValue.Name': 'id',
+                        [{'Service': 3, 'RequestPropertyValue.Name': 'handle',
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('Webadmin Actions'), 'logger', 
@@ -364,7 +364,7 @@ class KeySetDetail(ObjectDetail):
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('EPP Actions'), 'logger', 
-                        [{'Service': 3, 'RequestPropertyValue.Name': 'id',
+                        [{'Service': 3, 'RequestPropertyValue.Name': 'handle',
                             'RequestPropertyValue.Value': self.data.get('handle'),
                             'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                     [_('Webadmin Actions'), 'logger', 
@@ -467,7 +467,7 @@ class DomainDetail(ObjectDetail):
                         'RequestPropertyValue.Value': self.data.get('handle'),
                         'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                 [_('EPP Actions'), 'logger', 
-                    [{'Service': 3, 'RequestPropertyValue.Name': 'name',
+                    [{'Service': 3, 'RequestPropertyValue.Name': 'handle',
                         'RequestPropertyValue.Value': self.data.get('handle'),
                         'TimeBegin': FILTER_LOG_REQUEST_TIME_LIMIT_LAST_MONTH}]],
                 [_('Webadmin Actions'), 'logger', 
